tests/snapshots/variadics__JsonDB inserted.snap
---
source: tests/variadics.rs
expression: "db.get_all_with_operatable::<Partition123>()?"
---
(
    [
        TestRecordPartitioned {
            id: 1,
            data: "My data of 1",
        },
    ],
    (
        [],
        [
            TestRecordPartitioned3 {
                id: 2,
                data: "My data of 2",
            },
        ],
    ),
)
