tests/snapshots/variadics__MemoryDB initialized should be empty.snap
---
source: tests/variadics.rs
expression: "Partition123::get_all(&db)?"
---
(
    [],
    (
        [],
        [],
    ),
)
