tests/snapshots/variadics__cbor-DashMapDB initialized should be empty.snap
---
source: tests/variadics.rs
expression: "db.get_all_with_operatable::<Partition123>()?"
---
(
    [],
    (
        [],
        [],
    ),
)
