tests/snapshots/variadics__json-MemoryDB updated all.snap
---
source: tests/variadics.rs
expression: "db.get_all_with_operatable::<Partition123>()?"
---
(
    [
        TestRecordPartitioned {
            id: 1,
            data: "My data of 1",
        },
        TestRecordPartitioned {
            id: 3,
            data: "My data of 3",
        },
        TestRecordPartitioned {
            id: 9,
            data: "Data 1 has been updated!",
        },
        TestRecordPartitioned {
            id: 11,
            data: "Data 1 has been updated!",
        },
        TestRecordPartitioned {
            id: 12,
            data: "My data of 12",
        },
        TestRecordPartitioned {
            id: 13,
            data: "My data of 13",
        },
    ],
    (
        [
            TestRecordPartitioned2 {
                id: 4,
                data: "My data of 4",
            },
            TestRecordPartitioned2 {
                id: 5,
                data: "My data of 5",
            },
            TestRecordPartitioned2 {
                id: 10,
                data: "Data 2 has been updated!",
            },
            TestRecordPartitioned2 {
                id: 14,
                data: "My data of 14",
            },
            TestRecordPartitioned2 {
                id: 15,
                data: "Data 2 has been updated!",
            },
            TestRecordPartitioned2 {
                id: 16,
                data: "My data of 16",
            },
        ],
        [
            TestRecordPartitioned3 {
                id: 2,
                data: "My data of 2",
            },
            TestRecordPartitioned3 {
                id: 6,
                data: "My data of 6",
            },
            TestRecordPartitioned3 {
                id: 7,
                data: "My data of 7",
            },
            TestRecordPartitioned3 {
                id: 8,
                data: "My data of 8",
            },
            TestRecordPartitioned3 {
                id: 17,
                data: "My data of 17",
            },
            TestRecordPartitioned3 {
                id: 18,
                data: "My data of 18",
            },
            TestRecordPartitioned3 {
                id: 19,
                data: "Data 3 has been updated!",
            },
        ],
    ),
)
